Модицикация под новые типы данных.